nfs-client-provisioner.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: nfs-client-provisioner
  name: nfs-client-provisioner
  namespace: kube-system
spec:
  containers:
  - env:
    - name: PROVISIONER_NAME
      value: okd-platform.sonic.com/nfs-client-provisioner
    - name: NFS_SERVER
      value: 10.30.0.41
    - name: NFS_PATH
      value: /ceph_to_vsphere_01/nfs_okd_calico
    image: docker-repo.sonic.com:443/external_storage/nfs-client-provisioner:v3.1.0-k8s1.11
    imagePullPolicy: IfNotPresent
    name: nfs-client-provisioner
    volumeMounts:
    - mountPath: /persistentvolumes
      name: nfs-client-root
  volumes:
  - name: nfs-client-root
    nfs:
      path: /ceph_to_vsphere_01/nfs_okd_calico
      server: 10.30.0.41
