tomcat-route.yaml
kind: Route
apiVersion: v1
metadata:
    name: tomcat-route
spec:
    host: tomcat05.cup.com
    to:
      kind: Service
      name: tomcat05
